--- a/apps/route/custom.html
+++ b/apps/route/custom.html
@@ -184,6 +184,12 @@ function getNextPtInfo() {
   nextDist = Math.sqrt(dx*dx+dy*dy)*coordScale;
 }
 
+function recomputeNextPt(){
+  if (fix && fix.fix) {
+
+  }
+}
+
 function onGPS(f) {
   fix = f;
   fix.p = Bangle.project(fix);
@@ -235,6 +241,10 @@ function onCompass(m) {
 // draw the heading
 var oldHeading = 0;
 Bangle.on('GPS', onGPS);
+setWatch(() => {
+  E.showMessage("You\npressed\nthe middle\nbutton!");
+  setTimeout(()=>g.clear(), 1000);
+}, BTN1);
 Bangle.on('mag', onCompass);
 Bangle.setGPSPower(1);
 Bangle.setCompassPower(1);
