--- a/apps/route/custom.html
+++ b/apps/route/custom.html
@@ -231,13 +231,34 @@ function onCompass(m) {
   oldHeading = heading;
 }
 
+function recompute(){
+  if (fix.fix){
+    //Find the first point that is close enough
+    for (var i=0;i<coords.length;i+=2) {
+      var p = {x:coords[i],y:coords[i+1]};
+      var dx = p.x - fix.p.x;
+      var dy = p.y - fix.p.y;
+      var dist = Math.sqrt(dx*dx+dy*dy)*coordScale;
+      if (dist < PT_DISTANCE)
+      {
+        if ((i+2)<coords.length){
+          nextPtIdx=i+2;
+          nextPt = {x:coords[nextPtIdx], y:coords[nextPtIdx+1]};
+          getNextPtInfo();
+        }
+      }
+    }
+  }
+}
+
 
 // draw the heading
 var oldHeading = 0;
 Bangle.on('GPS', onGPS);
 setWatch(() => {
-  E.showMessage("You\npressed\nthe middle\nbutton!");
-  setTimeout(()=>g.clear(), 1000);
+  E.showMessage("Recomputing\nyour position\nin the route!");
+  recompute();
+  g.clear();
 }, BTN1);
 Bangle.on('mag', onCompass);
 Bangle.setGPSPower(1);
